--- a/css/style.css
+++ b/css/style.css
@@ -51,21 +51,28 @@ a {
 
 .home {
     background-color: rgb(220, 224, 217);
+    font-size: 25px;
+}
+
+.home h1 {
+    padding: 5% 1.5% 3% 1.5%;
 }
 
 .home .wrapper {
     display: grid;
     place-self: center;
+    max-width: 820px;
+    padding: 12rem 1rem;
 }
 
-.home img {
+/* .home img {
     border-radius: 100%;
     padding: 3rem 1rem;
     height: 25rem;
     grid-area: 2 / 1 / span 2 / span 1;
     align-self: center;
     margin: auto;
-}
+} */
 
 h1>span {
     width: 100%;
@@ -81,6 +88,15 @@ h1>span {
     font-size: 1.2rem;
     text-align: justify;
     line-height: 2rem;
+}
+
+.about .wrapper img {
+    height: 25rem;
+    /* grid-area: 1 / 1 / span 1 / span 1; */
+}
+
+.about .wrapper p {
+    grid-area: 1 / 2 / span 1 / span 1;
 }
 
 h1 {
@@ -216,9 +232,64 @@ footer p {
     color:rgb(255, 255, 255);
 }
 
-@media (min-width: 700px) {
+.rw-words-1 span{
+    position: absolute;
+    opacity: 0;
+    overflow: hidden;
+    -webkit-animation: rotateWord 16s linear infinite 0s;
+    -ms-animation: rotateWord 16s linear infinite 0s;
+    animation: rotateWord 16s linear infinite 0s;
+}
+
+.rw-words-1 span:nth-child(2) { 
+    -webkit-animation-delay: 4s; 
+    -ms-animation-delay: 4s; 
+    animation-delay: 4s; 
+}
+
+.rw-words-1 span:nth-child(3) { 
+    -webkit-animation-delay: 8s; 
+    -ms-animation-delay: 8s; 
+    animation-delay: 8s; 
+}
+
+.rw-words-1 span:nth-child(4) { 
+    -webkit-animation-delay: 12s; 
+    -ms-animation-delay: 12s; 
+    animation-delay: 12s; 
+}
+
+@-webkit-keyframes rotateWord {
+    0% { opacity: 0; -webkit-transform: translateX(0px); }
+    3% { opacity: 1; -webkit-transform: translateX(0px);}
+    21% { opacity: 1; -webkit-transform: translateX(0px); }
+    24% { opacity: 0; -webkit-transform: translateX(0px); }
+    80% { opacity: 0; }
+    100% { opacity: 0; }
+}
+
+@-ms-keyframes rotateWord {
+    0% { opacity: 0; -ms-transform: translateX(0px); }
+    3% { opacity: 1; -ms-transform: translateX(0px);}
+    21% { opacity: 1; -ms-transform: translateX(0px); }
+    24% { opacity: 0; -ms-transform: translateX(0px); }
+    80% { opacity: 0; }
+    100% { opacity: 0; }
+}
+
+@keyframes rotateWord {
+    0% { opacity: 0; -webkit-transform: translateX(0px); transform: translateX(0px); }
+    3% { opacity: 1; -webkit-transform: translateX(0px); transform: translateX(0px);}
+    21% { opacity: 1; -webkit-transform: translateX(0px); transform: translateX(0px); }
+    24% { opacity: 0; -webkit-transform: translateX(00px); transform: translateX(0px); }
+    80% { opacity: 0; }
+    100% { opacity: 0; }
+}
+
+@media (min-width: 800px) {
     nav ul {
         justify-content: flex-end;
+        z-index: 10;
     }
 
     li {
@@ -226,12 +297,30 @@ footer p {
     }
 
     .home h1 {
-        line-height: 3.5rem;
+        line-height: 6rem;
         grid-area: 2 / 2 / span 2 / span 1;
         color: rgb(78, 96, 129);
         align-self: center;
         padding: 3% 1.5%;
+        font-weight: bolder;
+        font-size: 60px;
     }
+
+    .about .wrapper .text {
+        display: grid;
+        gap: 20px;
+        justify-items: stretch;
+        margin: 0;
+    }
+
+    .about .wrapper img {
+        place-self: center;
+    }
+
+    .about .wrapper .title {
+        font-weight: bold;
+    }
+
     .container-work,
     .container-work2 {
         display: grid;
