--- a/css/style.css
+++ b/css/style.css
@@ -63,7 +63,7 @@ a {
     display: grid;
     place-self: center;
     max-width: 820px;
-    padding: 12rem 1rem;
+    height: 20rem;
 }
 
 h1>span {
@@ -288,6 +288,10 @@ footer p {
 
     li {
         padding: 0 2rem;
+    }
+
+    .home .wrapper {
+        height: 30rem;
     }
 
     .home h1 {
