--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
 
 body {
     margin: 0;
+    background-color: rgb(251, 246, 239);
 }
 
 .container {
@@ -99,8 +100,16 @@ h1 {
 }
 
 .skills {
-    background-color: rgb(234, 215, 195);
+    position: relative;
+    background-image: linear-gradient(rgb(251, 254, 251), rgb(234, 215, 195));
 }
+
+svg {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 6vw;
+  }
 
 .skills .wrapper {
     display: grid;
@@ -116,7 +125,6 @@ h1 {
     display: grid;
     place-self: center;
     padding: 1.5rem;
-    height: 12rem;
 }
 
 .icons-container span {
@@ -124,14 +132,20 @@ h1 {
 }
 
 .icons-container i {
-    font-size: 6rem;
+    font-size: 3.5rem;
     color: rgb(30, 0, 119);
+    align-self: end;
+    justify-self: center;
 }
 
 .skills p,
 .work p,
 .contact p {
     font-size: 1.2rem;
+}
+
+.work {
+    background-color: rgb(255, 255, 255);
 }
 
 .work .wrapper {
@@ -183,7 +197,10 @@ h1 {
 }
 
 .contact {
-    background-color: rgb(204, 210, 187);
+    /* background-color: rgb(204, 210, 187); */
+    /* background-color: rgb(234, 215, 195); */
+    background-color: rgb(251, 254, 251);
+
 }
 
 .contact .wrapper {
