--- a/css/style.css
+++ b/css/style.css
@@ -113,7 +113,7 @@ svg {
 
 .skills .wrapper {
     display: grid;
-    max-width: 900px;
+    /* max-width: 900px; */
 }
 
 .icons-container {
@@ -206,7 +206,7 @@ svg {
 
 .contact .wrapper {
     display: grid;
-    max-width: 900px;
+    /* max-width: 900px; */
 }
 
 .container-contact {
