--- a/css/style.css
+++ b/css/style.css
@@ -75,7 +75,7 @@ h1>span {
 
 .about {
     background-color: rgb(251, 254, 251);
-    padding: 5rem 0 4rem 0;
+    padding: 5rem 1rem 4rem 1rem;
 }
 
 .about .wrapper {
@@ -104,7 +104,7 @@ h1 {
 .skills {
     position: relative;
     background-image: linear-gradient(rgb(251, 254, 251), rgb(234, 215, 195));
-    padding: 5rem 0 8rem 0;
+    padding: 5rem 1rem 8rem 1rem;
 }
 
 svg {
@@ -112,7 +112,7 @@ svg {
     bottom: 0;
     width: 100%;
     height: 6vw;
-  }
+}
 
 .skills .wrapper {
     display: grid;
@@ -149,7 +149,7 @@ svg {
 
 .work {
     background-color: rgb(255, 255, 255);
-    padding: 5rem 0 4rem 0;
+    padding: 5rem 1rem 4rem 1rem;
 }
 
 .work .wrapper {
@@ -205,8 +205,10 @@ svg {
     /* background-color: rgb(234, 215, 195); */
     /* background-color: rgb(251, 254, 251); */
     /* background-color: rgb(220, 224, 217); */
-    background-image: linear-gradient(rgb(255, 255, 255), rgb(251, 254, 251));
-    padding: 5rem 0 9rem 0;
+    position: relative;
+    background-image: linear-gradient(rgb(255, 255, 255), rgb(220, 224, 217));
+    /* background-image: linear-gradient(rgb(255, 255, 255), rgb(251, 254, 251)); */
+    padding: 5rem 1rem 9rem 1rem;
 }
 
 .contact .wrapper {
