--- a/css/style.css
+++ b/css/style.css
@@ -238,8 +238,10 @@ svg {
     margin: 0;
 }
 
-.goodreads {
-    place-self: center;
+.bookshelf {
+    /* place-self: center; */
+    background-color: rgb(255, 255, 255);
+    padding: 5rem 1rem 4rem 1rem;
 }
 
 footer {
