--- a/css/style.css
+++ b/css/style.css
@@ -12,39 +12,101 @@ body {
 }
 
 header {
+    background: rgb(251, 246, 239, 0.97);
+    text-align: center;
+    position: fixed;
+    z-index: 999;
+    width: 100%;
+    height: 80px; /* wasn't in the tutorial */
+}
+
+.nav-toggle {
+    display: none;
+}
+
+.nav-toggle-label {
+    position: absolute;
+    top: 0;
+    right: 0;
+    margin-right: 1em;
+    height: 100%;
+    display: flex;
+    align-items: center;
+}
+
+.nav-toggle-label span,
+.nav-toggle-label span::before,
+.nav-toggle-label span::after {
+    display: block;
+    background: rgb(78, 96, 129);
+    height: 2px;
+    width: 2em;
+    border-radius: 2px;
     position: relative;
 }
 
-nav ul {
-    background-color: rgb(251, 246, 239, 0.97);
-    display: flex;
-    justify-content: space-between;
-    position: fixed;
-    top: 0;
-    right: 0;
-    bottom: 0;
+.nav-toggle-label span::before,
+.nav-toggle-label span::after {
+  content: '';
+  position: absolute;
+}
+
+.nav-toggle-label span::before {
+    bottom: 7px;
+  }
+  
+  .nav-toggle-label span::after {
+    top: 7px;
+  }
+
+nav {
+    position: absolute;
+    text-align: right;
+    top: 100%;
     left: 0;
-    height: 80px;
-    align-items: center;
+    background-color: rgb(251, 246, 239, 0.97);
+    width: 100%;
+    transform: scale(1, 0);
+    transform-origin: top;
+    transition: transform 400ms ease-in-out;
+}
+
+nav ul {
     margin: 0;
-    padding: 0 10px;
-    z-index: 10;
+    padding: 0;
+    list-style: none;
 }
 
-li {
-    list-style-type: none;
+nav li {
+    margin-bottom: 1em;
+    margin-right: 1em;
 }
 
-a {
+nav a {
     color: rgb(78, 96, 129);
-    font-weight: 900;
     text-decoration: none;
+    font-weight: 900;
+    opacity: 0;
+    transition: opacity 150ms ease-in-out;
+}
+
+nav a:hover {
+    text-shadow: 0px 0px 1px rgb(29, 35, 47);
+}
+
+.nav-toggle:checked ~ nav {
+    transform: scale(1, 1);
+    transition: opacity 250ms ease-in-out 250ms;
+}
+
+.nav-toggle:checked ~ nav a {
+    opacity: 1;
+
 }
 
 .wrapper {
     max-width: 1280px;
     margin: auto;
-    /* padding: 9rem 1rem; */
 }
 
 .nav {
@@ -321,12 +383,52 @@ footer p {
 }
 
 @media (min-width: 800px) {
-    nav ul {
-        justify-content: flex-end;
+    .nav-toggle-label {
+        display: none;
     }
 
-    li {
-        padding: 0 2rem;
+    header {
+        display: grid;
+        grid-template-columns: 1fr minmax(600px, 16fr) 1fr;
+    }
+
+    nav {
+        all: unset;
+        grid-column: 2 / 3;
+        display: flex;
+        justify-content: flex-end;
+        align-items: center;
+    }
+
+    nav ul {
+        display: flex;
+    }
+
+    nav li {
+        margin-left: 3em;
+        margin-bottom: 0;
+    }
+
+    nav a {
+        opacity: 1;
+        position: relative;
+    }
+
+    nav a::before {
+        content: '';
+        display: block;
+        height: 2px;
+        background: rgb(78, 96, 129);
+        position: absolute;
+        bottom: -.25em;
+        left: 0;
+        right: 0;
+        transform: scale(0, 1);
+        transition: transform ease-in-out 250ms;
+    }
+
+    nav a:hover::before {
+        transform: scale(1, 1)
     }
 
     .home .wrapper {
