--- a/css/style.css
+++ b/css/style.css
@@ -241,6 +241,23 @@ h1 {
 
 .container-link a {
     font-size: 1.5rem;
+    text-decoration: none;
+    display: flex;
+    gap: 10px;
+    align-items: center;
+    color: rgb(78, 96, 129);
+    padding: 0 10px;
+}
+
+.container-link a:hover {
+    background-color: rgb(78, 96, 129);
+    border-radius: 10px;
+    color: white;
+    transition: 0.5s;
+}
+
+.container-link a img {
+    box-shadow: none;
 }
 
 .container-tech {
@@ -311,7 +328,6 @@ h1 {
 }
 
 .bookshelf {
-    /* place-self: center; */
     background-color: rgb(255, 255, 255);
     padding: 5rem 1rem 4rem 1rem;
 }
