--- a/css/style.css
+++ b/css/style.css
@@ -146,14 +146,12 @@ h1 > span {
     line-height: 2rem;
 }
 
-.about .wrapper img {
-    height: 25rem;
-    float: left;
-    padding: 1.5em 1.5em 1.5em 0;
+.about .wrapper .text {
+    display: grid;
 }
 
-.about .wrapper p {
-    grid-area: 1 / 2 / span 1 / span 1;
+.about .wrapper img {
+    height: 25rem;
 }
 
 h1 {
@@ -398,7 +396,7 @@ footer p {
     }
 }
 
-@media (min-width: 800px) {
+@media (min-width: 750px) {
     .nav-toggle-label {
         display: none;
     }
@@ -461,16 +459,14 @@ footer p {
         font-size: 60px;
     }
 
-    /* .about .wrapper .text {
-        display: grid;
-        gap: 20px;
-        justify-items: stretch;
-        margin: 0;
-    } */
+    .about .wrapper .text {
+        display: block;
+    }
 
-    /* .about .wrapper img {
+    .about .wrapper img {
+        float: left;
         padding: 1.5em 1.5em 1.5em 0;
-    } */
+    }
 
     .container-work,
     .container-work2 {
